--- a/src/wine_analysis_hplc_uv/notebooks/python_notebooks/python.plotting.cheatsheet.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/python_notebooks/python.plotting.cheatsheet.ipynb
@@ -15,9 +15,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# put legend outside plot\n",
-    "\n",
-    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)\n"
+    "# put legend outside plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.legend(bbox_to_anchor=(1.05, 1), loc=2, borderaxespad=0.)"
    ]
   },
   {
@@ -64,6 +71,22 @@
     "```\n",
     "\n",
     "speeds up the plotting of that particular figure from 1 min 40 seconds to 4.2 seconds."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dont share axes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "facet_kws={'sharey': False, 'sharex': True}"
    ]
   },
   {
