--- a/src/wine_analysis_hplc_uv/notebooks/signal_processing/2023-08-14.solve_too_long_pwine_data.ipynb
+++ b/src/wine_analysis_hplc_uv/notebooks/signal_processing/2023-08-14.solve_too_long_pwine_data.ipynb
@@ -101,8 +101,7 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    df_98\n",
-    "    .pipe(lambda df: df if display(df.describe()) is None else df)\n",
+    "    df_98.pipe(lambda df: df if display(df.describe()) is None else df)\n",
     "    .pipe(lambda df: df if df.loc[:, \"mins\"].plot.line() else df)\n",
     "    .pipe(lambda df: df if df.plot.line(x=\"mins\", y=\"value\") else df)\n",
     "    .pipe(\n",
@@ -132,19 +131,13 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "f_df = (df\n",
-    " .stack('samplecode')\n",
-    "    .assign(f=lambda df: 1 / df.groupby('samplecode')['mins'].diff(1))\n",
-    "    .assign(f=lambda df: df['f'].round(2))\n",
-    "   .pipe(lambda df: df\n",
-    "                     if print(\n",
-    "                        df\n",
-    "                        .loc[:,'f']\n",
-    "                        .value_counts()\n",
-    "                     )\n",
-    "                     is None else df\n",
-    "                     )\n",
-    ")\n"
+    "\n",
+    "f_df = (\n",
+    "    df.stack(\"samplecode\")\n",
+    "    .assign(f=lambda df: 1 / df.groupby(\"samplecode\")[\"mins\"].diff(1))\n",
+    "    .assign(f=lambda df: df[\"f\"].round(2))\n",
+    "    .pipe(lambda df: df if print(df.loc[:, \"f\"].value_counts()) is None else df)\n",
+    ")"
    ]
   },
   {
@@ -163,18 +156,17 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "rf_df = (\n",
-    "    f_df    \n",
-    "    .reset_index()\n",
+    "    f_df.reset_index()\n",
     "    .assign(\n",
     "        rollingfu=lambda df: df.groupby(\"samplecode\")[\"f\"]\n",
     "        .rolling(2)\n",
     "        .mean()\n",
     "        .reset_index(level=0, drop=True)\n",
     "    )\n",
-    "    .pipe(lambda df: df if df\n",
-    "    .groupby(['samplecode','wine'])['rollingfu']\n",
-    "    .mean()\n",
-    "    .plot.hist() else df\n",
+    "    .pipe(\n",
+    "        lambda df: df\n",
+    "        if df.groupby([\"samplecode\", \"wine\"])[\"rollingfu\"].mean().plot.hist()\n",
+    "        else df\n",
     "    )\n",
     ");"
    ]
@@ -208,11 +200,10 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    rf_df\n",
-    "        .loc[lambda df: df['samplecode'].str.contains(\"97|98|99\", regex=True)]\n",
-    "        .groupby(['samplecode','wine'])['rollingfu']\n",
-    "        .mean()\n",
-    "        .plot.bar()\n",
+    "    rf_df.loc[lambda df: df[\"samplecode\"].str.contains(\"97|98|99\", regex=True)]\n",
+    "    .groupby([\"samplecode\", \"wine\"])[\"rollingfu\"]\n",
+    "    .mean()\n",
+    "    .plot.bar()\n",
     ")"
    ]
   },
@@ -252,7 +243,7 @@
     "        ;\n",
     "        \"\"\")\n",
     "con.sql(\n",
-    "        \"\"\"--sql\n",
+    "    \"\"\"--sql\n",
     "            CREATE OR REPLACE TEMPORARY TABLE ptemp AS\n",
     "            SELECT *\n",
     "            FROM (\n",
@@ -290,9 +281,10 @@
     "                ORDER BY rowcount\n",
     "\n",
     "            \"\"\"\n",
-    "    )\n",
+    ")\n",
     "(\n",
-    "    con.sql(\"SELECT * FROM ptemp\").df()\n",
+    "    con.sql(\"SELECT * FROM ptemp\")\n",
+    "    .df()\n",
     "    .pipe(\n",
     "        lambda df: df.set_axis(\n",
     "            pd.MultiIndex.from_tuples(\n",
@@ -301,13 +293,10 @@
     "            ),\n",
     "            axis=1,\n",
     "        )\n",
-    "        .rename_axis('i')\n",
+    "        .rename_axis(\"i\")\n",
     "        .droplevel(0, axis=1)\n",
     "    )\n",
-    "    .pipe(\n",
-    "        lambda df: \n",
-    "            sns.lineplot(df, x='mins',y='value')\n",
-    "    )\n",
+    "    .pipe(lambda df: sns.lineplot(df, x=\"mins\", y=\"value\"))\n",
     ")"
    ]
   },
@@ -317,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_data.get_wine_data(con, samplecode=('97','98','99'), wavelength=('254',))\n",
+    "get_data.get_wine_data(con, samplecode=(\"97\", \"98\", \"99\"), wavelength=(\"254\",))\n",
     "seq_df = pivot_wine_data.pivot_wine_data(con)"
    ]
   },
@@ -328,17 +317,15 @@
    "outputs": [],
    "source": [
     "(\n",
-    "    seq_df\n",
-    "    .pipe(lambda df: df if display(df) is None else df)\n",
+    "    seq_df.pipe(lambda df: df if display(df) is None else df)\n",
     "    .stack(0)\n",
-    "    .pipe(lambda df: df if display(df.unstack('samplecode').shape) is None else df)\n",
+    "    .pipe(lambda df: df if display(df.unstack(\"samplecode\").shape) is None else df)\n",
+    "    .pipe(lambda df: df if sns.lineplot(df, x=\"mins\", y=\"value\", hue=\"wine\") else df)\n",
     "    .pipe(\n",
-    "        lambda df: df if sns.lineplot(df, x='mins',y='value',hue='wine') else df\n",
+    "        lambda df: df\n",
+    "        if display(df.groupby(\"wine\")[\"mins\"].agg([\"min\", \"max\"])) is None\n",
+    "        else df\n",
     "    )\n",
-    "    .pipe(lambda df: df if display(df\n",
-    "                                   .groupby('wine')['mins']\n",
-    "                                   .agg(['min','max'])\n",
-    "                                   ) is None else df)\n",
     ")"
    ]
   },
@@ -364,7 +351,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"SELECT ch_samplecode, acq_method FROM c_chemstation_metadata where ch_samplecode IN ('96','97','98','99')\")"
+    "con.sql(\n",
+    "    \"SELECT ch_samplecode, acq_method FROM c_chemstation_metadata where ch_samplecode IN ('96','97','98','99')\"\n",
+    ")"
    ]
   },
   {
@@ -380,7 +369,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"SELECT chm.ch_samplecode, chm.acq_method, chm.id, chm.acq_date, chm.desc FROM c_chemstation_metadata chm where ch_samplecode IN ('72')\").df()"
+    "con.sql(\n",
+    "    \"SELECT chm.ch_samplecode, chm.acq_method, chm.id, chm.acq_date, chm.desc FROM c_chemstation_metadata chm where ch_samplecode IN ('72')\"\n",
+    ").df()"
    ]
   },
   {
@@ -389,7 +380,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"SELECT * FROM (SELECT ch_samplecode, COUNT(ch_samplecode) as count FROM c_chemstation_metadata GROUP BY ch_samplecode) WHERE count>1\")"
+    "con.sql(\n",
+    "    \"SELECT * FROM (SELECT ch_samplecode, COUNT(ch_samplecode) as count FROM c_chemstation_metadata GROUP BY ch_samplecode) WHERE count>1\"\n",
+    ")"
    ]
   },
   {
@@ -414,7 +407,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "con.sql(\"SELECT rchm.notebook, rchm.date, rchm.method, rchm.desc, rchm.id FROM chemstation_metadata rchm where rchm.notebook LIKE '%debor%'\")"
+    "con.sql(\n",
+    "    \"SELECT rchm.notebook, rchm.date, rchm.method, rchm.desc, rchm.id FROM chemstation_metadata rchm where rchm.notebook LIKE '%debor%'\"\n",
+    ")"
    ]
   },
   {
