finished off standardize_time pipe, fully converted to polars, moving repo to ruff formatting

--- a/src/wine_analysis_hplc_uv/notes/etl/prototyping_filename_cleaning.ipynb
+++ b/src/wine_analysis_hplc_uv/notes/etl/prototyping_filename_cleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b80d1453-75e9-4a87-bf37-e90b7a64a266",
+   "id": "0",
    "metadata": {
     "tags": []
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe8da07d-e486-4e30-9775-88c4af5faa13",
+   "id": "1",
    "metadata": {
     "tags": []
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4919058a-cf4c-4b29-958d-a34acbf4c87d",
+   "id": "2",
    "metadata": {},
    "source": [
     "https://stackoverflow.com/questions/57923275/correct-way-to-replace-date-yyyymmdd-to-yyyy-mm-dd-by-using-replace-method"
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d039b5e2-214b-46d6-b123-2752b1c340f3",
+   "id": "3",
    "metadata": {
     "tags": []
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78a15330-b4d6-4b8e-8a96-1a19eb228abe",
+   "id": "4",
    "metadata": {},
    "source": [
     "The below is a test to see how the regex string achieves the outcome, considering that inputting my filestrings does not work.\n",
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70dcadb7-0ae3-4745-8ee4-35f7d3478d48",
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29beffb1-6145-4d32-86d9-edcd7bc5dc63",
+   "id": "6",
    "metadata": {},
    "source": [
     "So the capture groups are defined by the brackets.\n",
@@ -113,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c89d934-0bd3-4612-b38e-428eb5fa4174",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a6140ca-9fe5-4c54-95ce-e905ea0768d3",
+   "id": "8",
    "metadata": {},
    "source": [
     "That works fine, except some of the file names also have hyphens after the dates when they should have underscores. Can I capture those hyphens and replace with underscores?"
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "857b0dae-8b02-4478-a354-0c5c1dbe0d26",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e8cd17d-21af-4aaa-8045-b623a341fad3",
+   "id": "10",
    "metadata": {},
    "source": [
     "Ok, trying again.."
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59c4ab04-4e8a-4ce5-8ead-fed173351442",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -191,7 +191,7 @@
     "            subbed_string = re.search(hyphen_match_string, obj.name)\n",
     "\n",
     "            print(subbed_string.groups())\n",
-    "        except:\n",
+    "        except Exception as e:\n",
     "            \"error\""
    ]
   }
