--- a/src/wine_analysis_hplc_uv/notes/finding_void_vol/2023-03-06_void_vol_calculation.ipynb
+++ b/src/wine_analysis_hplc_uv/notes/finding_void_vol/2023-03-06_void_vol_calculation.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61089057",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea8930a5-856f-4355-ae28-b91d53baf10b",
+   "id": "1",
    "metadata": {
     "tags": []
    },
@@ -19,15 +19,14 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "\n",
-    "# import pandas as pd\n",
-    "\n",
     "import sys\n",
+    "import pandas as pd\n",
+    "from scipy.signal import find_peak\n",
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "import agilette\n",
     "\n",
     "sys.path.insert(0, \"/Users/jonathan/wine_analysis_hplc_uv/scripts/agilette/\")\n",
-    "\n",
-    "import agilette\n",
     "\n",
     "ag = agilette.Agilette(\"/Users/jonathan/0_jono_data\")"
    ]
@@ -35,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02d607de-3bb3-448f-8c6a-ac2550254c7e",
+   "id": "2",
    "metadata": {
     "tags": []
    },
@@ -46,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1deb725f-40f7-4a57-957c-2f0b62d28382",
+   "id": "3",
    "metadata": {},
    "source": [
     "## Loading the Acetone Void Vol Data"
@@ -55,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0ecf3a6-9e20-4353-9b6f-c3341ca06e66",
+   "id": "4",
    "metadata": {
     "tags": []
    },
@@ -68,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf3d035-d116-456a-af18-84de9539da0a",
+   "id": "5",
    "metadata": {},
    "source": [
     "## Extracting Abs Maxima Wavelength Signal"
@@ -77,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4df1576c-a623-4be6-9af4-0972cc7487a6",
+   "id": "6",
    "metadata": {
     "tags": []
    },
@@ -88,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f36c17e4-66ac-4271-9ee4-b51d5d3abfc8",
+   "id": "7",
    "metadata": {},
    "source": [
     "Acetone has a abs max around 279nm, which is designated as Signal B:"
@@ -97,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "804b8ba9-1c16-4654-8fee-b6e96d474015",
+   "id": "8",
    "metadata": {
     "tags": []
    },
@@ -108,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d74396-9d2e-460f-94b5-2c08d0546783",
+   "id": "9",
    "metadata": {},
    "source": [
     "## Renaming The Runs"
@@ -117,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a438b68b-9bfd-41ec-b7fb-fb11be3b13c6",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -129,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce66c2b1-a462-48f7-b166-e85446796f95",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -145,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf0b5dd5-8ae5-4963-a1be-f642d26bbdca",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -161,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e43c4a3-c722-44df-8c62-b75ac4ee5aad",
+   "id": "13",
    "metadata": {
     "tags": []
    },
@@ -172,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a1bf421-9928-40c4-b198-1db6981fc102",
+   "id": "14",
    "metadata": {},
    "source": [
     "## Plotting the Runs"
@@ -181,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4824019-df5c-4879-94e9-7d3c62fe4800",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -193,27 +192,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c8e09a8-ca0c-4e1f-bc3a-ba20d059753d",
+   "id": "16",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from scipy.signal import find_peaks"
+    "s"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac5358d5-5ebf-419b-9c1a-a860a3b4094a",
+   "id": "17",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import plotly.graph_objs as go\n",
-    "\n",
     "## set up parameters for peak detection and plotting.\n",
     "\n",
     "run_name = \"acetone_0001\"\n",
@@ -225,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0824182c-12f4-4f43-9e16-bd72bf0fbd7b",
+   "id": "18",
    "metadata": {
     "tags": []
    },
@@ -236,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8c24453-7d46-470d-af08-1353f7cc427e",
+   "id": "19",
    "metadata": {
     "tags": []
    },
@@ -287,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e7403d8-41b6-4efb-b7d0-54d27f344e36",
+   "id": "20",
    "metadata": {},
    "source": [
     "So, what do we want to do now? Get the peak description for each reading, then plot their values against concentration. First make a function doing the same."
@@ -295,26 +291,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6372653-eefe-4620-b1b2-070514f77384",
+   "id": "21",
    "metadata": {
     "tags": []
    },
    "source": [
-    "### Functionalising it"
+    "### As A Function"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70b849fb-ecc1-44c8-923d-1f7d7ebf8dc9",
+   "id": "22",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
-    "\n",
     "def voidvolplotter(data_df, run_name):\n",
     "    # set up the figure\n",
     "\n",
@@ -357,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3dcf0b-6041-476c-bbd1-d5886ce50f2f",
+   "id": "23",
    "metadata": {
     "tags": []
    },
@@ -369,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1032c108-bd4a-4f05-8bc0-b20aab35888a",
+   "id": "24",
    "metadata": {
     "tags": []
    },
@@ -387,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b3e853-e9a8-4a76-b9cd-73a66e9b7e5b",
+   "id": "25",
    "metadata": {},
    "source": [
     "{ \"name\" : { inj_vol : data }}"
@@ -396,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "361b5a02-4736-4a95-bcdd-19641ae0073e",
+   "id": "26",
    "metadata": {
     "tags": []
    },
@@ -415,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de214669-678a-40b6-9562-afefa68e93dd",
+   "id": "27",
    "metadata": {},
    "source": [
     "So the pattern is:\n",
@@ -426,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46336612-92e2-48f6-b7c0-3a2d624fe125",
+   "id": "28",
    "metadata": {
     "tags": []
    },
@@ -441,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a285c538-a096-4da5-a696-2a50178765f2",
+   "id": "29",
    "metadata": {},
    "source": [
     "This is a mess, let's redefine. Maybe OOP. But need to know in what format the data needs to be.\n",
@@ -454,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2a9ff5c-fed3-4078-a315-21b7460bb8c9",
+   "id": "30",
    "metadata": {
     "tags": []
    },
@@ -470,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66cdec55-bdce-4e21-b07b-cbe767c959ed",
+   "id": "31",
    "metadata": {
     "tags": []
    },
@@ -489,7 +482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bef2787-2879-44d3-9295-58ea7bccd252",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": []
