--- a/src/wine_analysis_hplc_uv/notes/etl/prototyping_filename_cleaning.ipynb
+++ b/src/wine_analysis_hplc_uv/notes/etl/prototyping_filename_cleaning.ipynb
@@ -191,7 +191,7 @@
     "            subbed_string = re.search(hyphen_match_string, obj.name)\n",
     "\n",
     "            print(subbed_string.groups())\n",
-    "        except Exception as e:\n",
+    "        except Exception:\n",
     "            \"error\""
    ]
   }
