--- a/src/wine_analysis_hplc_uv/notes/finding_void_vol/2023-03-06_void_vol_calculation.ipynb
+++ b/src/wine_analysis_hplc_uv/notes/finding_void_vol/2023-03-06_void_vol_calculation.ipynb
@@ -4,9 +4,24 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import sys\n",
+    "import pandas as pd\n",
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "import agilette\n",
+    "from scipy.signal import find_peaks\n",
+    "\n",
+    "sys.path.insert(0, \"/Users/jonathan/wine_analysis_hplc_uv/scripts/agilette/\")\n",
+    "\n",
+    "ag = agilette.Agilette(\"/Users/jonathan/0_jono_data\")"
+   ]
   },
   {
    "cell_type": "code",
@@ -17,35 +32,12 @@
    },
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import sys\n",
-    "import pandas as pd\n",
-    "from scipy.signal import find_peak\n",
-    "import plotly.graph_objs as go\n",
-    "import numpy as np\n",
-    "import agilette\n",
-    "\n",
-    "sys.path.insert(0, \"/Users/jonathan/wine_analysis_hplc_uv/scripts/agilette/\")\n",
-    "\n",
-    "ag = agilette.Agilette(\"/Users/jonathan/0_jono_data\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "ag.data_table().head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "source": [
     "## Loading the Acetone Void Vol Data"
@@ -54,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {
     "tags": []
    },
@@ -67,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Extracting Abs Maxima Wavelength Signal"
@@ -76,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {
     "tags": []
    },
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "Acetone has a abs max around 279nm, which is designated as Signal B:"
@@ -96,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {
     "tags": []
    },
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Renaming The Runs"
@@ -116,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {
     "tags": []
    },
@@ -128,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {
     "tags": []
    },
@@ -144,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {
     "tags": []
    },
@@ -160,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -171,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Plotting the Runs"
@@ -180,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "14",
    "metadata": {
     "tags": []
    },
@@ -192,19 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "s"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "17",
+   "id": "15",
    "metadata": {
     "tags": []
    },
@@ -221,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "16",
    "metadata": {
     "tags": []
    },
@@ -232,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "17",
    "metadata": {
     "tags": []
    },
@@ -254,7 +234,6 @@
     "\n",
     "cy = data[:, 1]\n",
     "\n",
-    "import numpy as np\n",
     "\n",
     "# # draw the chromatogram\n",
     "\n",
@@ -283,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20",
+   "id": "18",
    "metadata": {},
    "source": [
     "So, what do we want to do now? Get the peak description for each reading, then plot their values against concentration. First make a function doing the same."
@@ -291,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21",
+   "id": "19",
    "metadata": {
     "tags": []
    },
@@ -302,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "20",
    "metadata": {
     "tags": []
    },
@@ -350,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "21",
    "metadata": {
     "tags": []
    },
@@ -362,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "22",
    "metadata": {
     "tags": []
    },
@@ -380,7 +359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25",
+   "id": "23",
    "metadata": {},
    "source": [
     "{ \"name\" : { inj_vol : data }}"
@@ -389,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "24",
    "metadata": {
     "tags": []
    },
@@ -408,7 +387,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27",
+   "id": "25",
    "metadata": {},
    "source": [
     "So the pattern is:\n",
@@ -419,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "26",
    "metadata": {
     "tags": []
    },
@@ -434,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "27",
    "metadata": {},
    "source": [
     "This is a mess, let's redefine. Maybe OOP. But need to know in what format the data needs to be.\n",
@@ -447,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30",
+   "id": "28",
    "metadata": {
     "tags": []
    },
@@ -463,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "29",
    "metadata": {
     "tags": []
    },
@@ -482,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -504,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
