--- a/src/wine_analysis_hplc_uv/notes/signal_processing/preprocessing/savgol_filter/references.bib
+++ b/src/wine_analysis_hplc_uv/notes/signal_processing/preprocessing/savgol_filter/references.bib
@@ -1,4 +1,4 @@
-@article{savitzky_1964,
+@article{savitzky.SmoothingDifferentiationData.1964,
   title = {Smoothing and {{Differentiation}} of {{Data}} by {{Simplified Least Squares Procedures}}.},
   author = {family=Savitzky, given=Abraham., given-i={{Abraham}} and Golay, M. J. E.},
   date = {1964-07-01},
