outlined quarto project for thesis sections

--- a/src/wine_analysis_hplc_uv/notes/signal_processing/2023-03-10_baselines.ipynb
+++ b/src/wine_analysis_hplc_uv/notes/signal_processing/2023-03-10_baselines.ipynb
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So the problem with this approach is that the peak detection is based on an absolute value not in reference to a changing baseline. We need a better method to both fit the actual baseline more closely AND a way of interfacting it with a peak detection algorithm. ChatGPT suggests using ALS from the baseline package. It doesn't exist."
+    "So the problem with this approach is that the peak detection is based on an absolute value not in reference to a changing baseline. We need a better method to both fit the actual baseline more closely AND a way of interfacting it with a peak detection algorithm."
    ]
   },
   {
